--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
+category: 'tool-and-service'
 pubDate: 'Jul 02 2022'
 heroImage: '/placeholder-hero.jpg'
 ---
@@ -15,7 +16,7 @@ If you have existing content authored in MDX, this integration will hopefully ma
 
 ## Example
 
-Here is how you import and use a UI component inside of MDX.  
+Here is how you import and use a UI component inside of MDX.
 When you open this page in the browser, you should see the clickable button below.
 
 import HeaderLink from '../../components/HeaderLink.astro';
