feat: 暫定タグページ作成(#5)

--- a/src/content/posts/using-mdx.mdx
+++ b/src/content/posts/using-mdx.mdx
@@ -1,8 +1,9 @@
 ---
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
-category: 'tool-and-service'
 pubDate: 'Jul 02 2022'
+category: 'tool-and-service'
+tags: ["markdown", "mdx"]
 heroImage: '/placeholder-hero.jpg'
 ---
 
