feat: hiroppyさんの実装をベースにOGコンポーネントの仕組み作成(#39)
ref: https://github.com/hiroppy/site/blob/main/src/components/OG.astro

--- a/src/content/posts/using-mdx.mdx
+++ b/src/content/posts/using-mdx.mdx
@@ -26,6 +26,12 @@ import HeaderLink from '../../components/HeaderLink.astro';
 	Embedded component in MDX
 </HeaderLink>
 
+import OG from '@/components/OG.astro';
+
+<OG url='https://zenn.dev/yumemi_inc/articles/2022-11-21-simple-git-hooks-auto-issue-number' />
+
+<OG url='https://tech.mobilefactory.jp/entry/2021/12/06/000000' />
+
 ## More Links
 
 - [MDX Syntax Documentation](https://mdxjs.com/docs/what-is-mdx)
