post fix: 細かな記事修正(#45)

--- a/src/content/posts/2018/2018-06-02-anyenv.mdx
+++ b/src/content/posts/2018/2018-06-02-anyenv.mdx
@@ -75,7 +75,7 @@ For full documentation, see: https://github.com/riywo/anyenv#readme
 
 ### anyenv-update インストール
 各種 env とそのプラグインを一括でまとめて更新してくれるものだそうです。
-それぞれ一つずつ更新するのは、確かに手間ですよね...。
+それぞれ1つずつ更新するのは、確かに手間ですよね...。
 
 1.格納するディレクトリの作成
 ```bash
@@ -125,7 +125,7 @@ anyenv install (各種env)
 anyenv install rbenv
 ```
 
-このコマンド一つで、ビルドに必要な各種`env-build`(rbenvなら`ruby-build`)も一緒にインストールしてくれます。
+このコマンド1つで、ビルドに必要な各種`env-build`(rbenvなら`ruby-build`)も一緒にインストールしてくれます。
 
 3.ログインシェルで`.bash_profile`再読み込み
 ```bash
