post fix: 更新日の値をハイフン区切りに統一(#49)

--- a/src/content/posts/2019/2019-06-03-laravel-laradock.mdx
+++ b/src/content/posts/2019/2019-06-03-laravel-laradock.mdx
@@ -2,7 +2,7 @@
 title: "LaradockでLaravel環境構築"
 description: "Laradockを使ってLaravel環境を作る手順"
 pubDate: "2019-06-03"
-updatedDate: "2021/02/24"
+updatedDate: "2021-02-24"
 category: "develop"
 tags: ["開発環境", "Docker", "PHP", "Laravel"]
 ---
