--- a/src/content/posts/2019/2019-06-23-qiita-ranking.mdx
+++ b/src/content/posts/2019/2019-06-23-qiita-ranking.mdx
@@ -2,7 +2,7 @@
 title: "QiitaいいねランキングをSlackに投稿"
 description: "GASを使ってAPIでデータを取得し、Slackに投稿するまでの手順"
 pubDate: "2019-06-23"
-updatedDate: "2023/06/10"
+updatedDate: "2023-06-10"
 category: "develop"
 tags: ["サーバレス", "Slack", "Google App Script"]
 ---
