--- a/src/content/posts/2019/2019-07-06-google-analytics.mdx
+++ b/src/content/posts/2019/2019-07-06-google-analytics.mdx
@@ -2,7 +2,7 @@
 title: "Jekyll製ブログにGoogle Analytics導入"
 description: "Google Analyticsを導入する際の手順"
 pubDate: "2019-07-06"
-updatedDate: "2020/05/03"
+updatedDate: "2020-05-03"
 category: "tool-and-service"
 tags: ["ブログ", "Jekyll"]
 ---
