--- a/src/content/posts/2019/2019-07-09-custom-domain.mdx
+++ b/src/content/posts/2019/2019-07-09-custom-domain.mdx
@@ -2,7 +2,7 @@
 title: "Netlifyでホスティングしているサイトに独自ドメインを設定する"
 description: "ドメイン取得後、Netlifyでホスティングしているサイトに独自ドメインを設定する手順"
 pubDate: "2019-07-09"
-updatedDate: "2020/04/14"
+updatedDate: "2020-04-14"
 category: "tool-and-service"
 tags: ["ブログ", "Netlify"]
 ---
