--- a/src/content/posts/2019/2019-08-14-docker-rails.mdx
+++ b/src/content/posts/2019/2019-08-14-docker-rails.mdx
@@ -2,7 +2,7 @@
 title: "RailsのDocker環境作成"
 description: "Docker公式手順で構築するなかで遭遇したエラーと対処法の記録"
 pubDate: "2019-08-14"
-updatedDate: "2021/02/07"
+updatedDate: "2021-02-07"
 category: "develop"
 tags: ["開発環境", "Docker", "Ruby", "Rails"]
 ---
