--- a/src/content/posts/2019/2019-08-17-til-150.mdx
+++ b/src/content/posts/2019/2019-08-17-til-150.mdx
@@ -2,7 +2,7 @@
 title: "TILリポジトリが150コミット突破"
 description: "勉強用リポジトリである、TILリポジトリのコミット数が150突破"
 pubDate: "2019-08-17"
-updatedDate: "2021/08/23"
+updatedDate: "2021-08-23"
 category: "develop"
 tags: ["TIL"]
 ---
