--- a/src/content/posts/2019/2019-09-05-aws-saa.mdx
+++ b/src/content/posts/2019/2019-09-05-aws-saa.mdx
@@ -2,7 +2,7 @@
 title: "AWS ソリューションアーキテクト アソシエイトに合格しました"
 description: "AWSの資格の一つであるソリューションアーキテクト アソシエイトに合格した記録"
 pubDate: "2019-09-05"
-updatedDate: "2019/09/05"
+updatedDate: "2019-09-05"
 category: "qualification"
 tags: ["AWS"]
 ---
