--- a/src/content/posts/2019/2019-09-14-docker-react-native.mdx
+++ b/src/content/posts/2019/2019-09-14-docker-react-native.mdx
@@ -2,7 +2,7 @@
 title: "DockerでReact Native環境作成から、Expo Clientで実機確認するまで"
 description: "DockerとExpoを使って、React Nativeプロジェクトのひな型を作り、実機確認するまでの手順"
 pubDate: "2019-09-14"
-updatedDate: "2019/09/28"
+updatedDate: "2019-09-28"
 category: "develop"
 tags: ["開発環境", "Docker", "JavaScript", "React Native", "Expo"]
 ---
