--- a/src/content/posts/2019/2019-09-26-wsl-develop.mdx
+++ b/src/content/posts/2019/2019-09-26-wsl-develop.mdx
@@ -2,7 +2,7 @@
 title: "WSLでWindowsの中にLinuxの開発環境を作ろう"
 description: "WSLでUbuntuを導入し、Linuxbrew、anyenvで開発環境を作成する手順"
 pubDate: "2019-09-26"
-updatedDate: "2021/04/22"
+updatedDate: "2021-04-22"
 category: "develop"
 tags: ["開発環境", "WSL", "HomeBrew", "anyenv"]
 ---
