--- a/src/content/posts/2019/2019-09-28-wsl-react-native.mdx
+++ b/src/content/posts/2019/2019-09-28-wsl-react-native.mdx
@@ -2,7 +2,7 @@
 title: "WSLでReact Native + Expo環境を作ろう"
 description: "WSLでExpoを使用して、React Native環境及びエミュレータ環境を作成する手順"
 pubDate: "2019-09-28"
-updatedDate: "2019/10/09"
+updatedDate: "2019-10-09"
 category: "develop"
 tags: ["開発環境", "WSL", "Android Studio", "JavaScript", "React Native", "Expo"]
 ---
