--- a/src/content/posts/2018/2018-09-09-cleaning-duty-2.mdx
+++ b/src/content/posts/2018/2018-09-09-cleaning-duty-2.mdx
@@ -27,7 +27,7 @@ tags: ["サーバレス", "Slack", "Google App Script"]
 v8 ランタイムに対応したため、let やアロー関数などが新たに使用できるようになりました。
 これに伴いリファクタリングを行っています。
 
-{/* <!-- textlint-disable --> */}
+{/* <!-- textlint-disable ja-technical-writing/sentence-length --> */}
 
 ランタイムの変更は、GAS エディタを開いたときに表示される案内（`Enable new Apps Script runtime powered by Chrome V8 for this project.`）から変更。
 もしくは実行→ Chrome V8 を搭載した新しい Apps Script ランタイムを有効にする からできます。
