fix: GASの正式名称がtypoしていたので直した(#55)

--- a/src/content/posts/2018/2018-09-09-cleaning-duty-1.mdx
+++ b/src/content/posts/2018/2018-09-09-cleaning-duty-1.mdx
@@ -4,7 +4,7 @@ description: "初めてのGASでBot作成チャレンジ"
 pubDate: "2018-09-09 10:00:00"
 updatedDate: "2020-02-16"
 category: "develop"
-tags: ["サーバレス", "Slack", "Google App Script"]
+tags: ["サーバレス", "Slack", "Google Apps Script"]
 ---
 
 職場で掃除当番の話が出ていたので、自動で掃除当番を決めて通知してくれる bot がいたらいいのかなぁと思い、ちょっと bot 作成に挑戦してみました。
