--- a/src/content/posts/2018/2018-09-09-cleaning-duty-2.mdx
+++ b/src/content/posts/2018/2018-09-09-cleaning-duty-2.mdx
@@ -4,7 +4,7 @@ description: "ランダムで掃除当番決めするBot作成チャレンジ"
 pubDate: "2018-09-09 12:00:00"
 updatedDate: "2020-02-16"
 category: "develop"
-tags: ["サーバレス", "Slack", "Google App Script"]
+tags: ["サーバレス", "Slack", "Google Apps Script"]
 ---
 
 前回、テスト投稿ができました。
