--- a/src/content/posts/2018/2018-09-09-cleaning-duty-3.mdx
+++ b/src/content/posts/2018/2018-09-09-cleaning-duty-3.mdx
@@ -4,7 +4,7 @@ description: "グループごとに掃除当番を決めるBot作成チャレン
 pubDate: "2018-09-09 14:00:00"
 updatedDate: "2020-02-16"
 category: "develop"
-tags: ["サーバレス", "Slack", "Google App Script"]
+tags: ["サーバレス", "Slack", "Google Apps Script"]
 ---
 
 前回までで、1つのグループ内でランダムに当番決め + 通知 ができました。
