post fix: コマンドを意味するものとして、つけていた$はつけないようにした(#60)

--- a/src/content/posts/2021/2021-11-09-volta.mdx
+++ b/src/content/posts/2021/2021-11-09-volta.mdx
@@ -193,7 +193,7 @@ volta list all
 
 インストールできる各種バージョンについては、確認コマンドが見当たらなかったので、自分で Node.js 公式等を見る必要がありそうです。
 デフォルトでは、パブリックソースおよびレジストリ（`https://nodejs.org`、`https://yarnpkg.com`、`https://www.npmjs.com`）から取得するとのこと。
-nodenv でいう`$ nodenv install -l`みたいな、一覧確認できるコマンドが今後追加されたらいいなぁと。
+nodenv でいう`nodenv install -l`みたいな、一覧確認できるコマンドが今後追加されたらいいなぁと。
 
 ちなみにパッケージマネージャに関しては、新しいものとして`pnpm`がありますが、一応は使えるかなという感じでした。
 （試しにインストールしてみようとしたところ、パッケージマネージャというよりは、後述する npm パッケージとして認識されたので）
@@ -305,7 +305,7 @@ ARGS:
 ```
 
 これは訳のとおりです。
-nodenv なんかだと、インストール（`$ nodenv install`）とグローバルバージョン設定（`$ nodenv global バージョン`）が別コマンドだったので、ちょっと不思議な感じですね。
+nodenv なんかだと、インストール（`nodenv install`）とグローバルバージョン設定（`nodenv global バージョン`）が別コマンドだったので、ちょっと不思議な感じですね。
 
 バージョン指定については fetch と同様です。
 
