fix: コマンド表記向けにつけていた$を除去(#73)
コードブロックでは、コピーボタンと相性が悪そうで除去に統一したので、
インラインコードもあわせることにした。

--- a/src/content/posts/2018/2018-06-02-anyenv.mdx
+++ b/src/content/posts/2018/2018-06-02-anyenv.mdx
@@ -16,7 +16,7 @@ tags: ["開発環境", "anyenv"]
 ---
 
 **※2019/11/06追記**
-この記事では`anyenv`を`$ git clone`で導入しています。
+この記事では`anyenv`を`git clone`で導入しています。
 brewを使用して導入するやり方もあり、以下の記事ではLinuxbrewで導入しています。
 [WSLでWindowsの中にLinuxの開発環境を作ろう](/posts/2019-09-26-wsl-develop)
 
@@ -84,7 +84,7 @@ mkdir -p $(anyenv root)/plugins
 ```bash
 git clone https://github.com/znz/anyenv-update.git $(anyenv root)/plugins/anyenv-update
 ```
-これで`$ anyenv update`コマンドが使えるようになります。
+これで`anyenv update`コマンドが使えるようになります。
 
 ### 各種 env のインストール
 1. インストールできる env の確認
