--- a/src/content/posts/2019/2019-06-03-laravel-laradock.mdx
+++ b/src/content/posts/2019/2019-06-03-laravel-laradock.mdx
@@ -196,7 +196,7 @@ git clone (プロジェクトパス)
 ```bash
 git submodule update -i
 ```
-※Laradock のディレクトリに移動し、`$ git submodule`で状態が確認できる
+※Laradock のディレクトリに移動し、`git submodule`で状態が確認できる
   `-c7289f7db3b96be585a879ceaf0f208102f8233f ./` のように頭に`-`がついている場合は、まだ中身を持ってこれてない状態。
 
 3. シェル実行で env ファイル作成 + mysql 設定ファイルコピー
