fix: タグ名の修正(#96)

--- a/src/content/posts/2022/2022-11-27-jsconf-jp-2022.mdx
+++ b/src/content/posts/2022/2022-11-27-jsconf-jp-2022.mdx
@@ -4,7 +4,7 @@ description: "JSConf JP 2022の公開資料、Twitterアカウントのリンク
 pubDate: "2022-11-27"
 updatedDate: "2022-11-27"
 category: "event"
-tags: ["リンク集", "JSCong JP"]
+tags: ["リンク集", "JSConf JP"]
 ---
 
 2022/11/26(土)で開催された JSConf JP 2022に関する、現時点での公開資料と Twitter アカウントリンクをまとめました。
