--- a/src/content/posts/2021/2021-11-28-jsconf-jp-2021.mdx
+++ b/src/content/posts/2021/2021-11-28-jsconf-jp-2021.mdx
@@ -4,7 +4,7 @@ description: "JSConf JP 2021の公開資料、Twitterアカウントのリンク
 pubDate: "2021-11-28"
 updatedDate: "2021-11-28"
 category: "event"
-tags: ["リンク集", "JSCong JP"]
+tags: ["リンク集", "JSConf JP"]
 ---
 
 2021/11/27(土)で開催された JSConf JP 2021に関する、現時点での公開資料と Twitter アカウントリンクをまとめました。
