post fix: フロントエンドカンファレンス沖縄2023記事タイトルのリネーム(#128)
Twitter表記でなくX表記にした。

--- a/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
+++ b/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
@@ -1,6 +1,6 @@
 ---
-title: "フロントエンドカンファレンス沖縄 2023 公開資料・Twitterリンクまとめ"
-description: "フロントエンドカンファレンス沖縄 2023の公開資料、Twitterのリンクまとめ"
+title: "フロントエンドカンファレンス沖縄 2023 公開資料・Xアカウントリンクまとめ"
+description: "フロントエンドカンファレンス沖縄 2023の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2023-11-18"
 updatedDate: "2023-11-18"
 category: "event"
