--- a/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
+++ b/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
@@ -56,7 +56,7 @@ X アカウントについては、資料に記載されていたり、資料公
 ### 11:50 デザインシステムの技術選定・設計の勘所 2023
 - 登壇者：takanorip[Ubie]　[@takanoripe](https://x.com/takanoripe)
 
-<OG url="https://www.figma.com/proto/uSIoSaF1Psg3lBkSHPEARx/2023%E5%B9%B4%E7%89%88-%E3%83%87%E3%82%B6%E3%82%A4%E3%83%B3%E3%82%B7%E3%82%B9%E3%83%86%E3%83%A0-%E6%8A%80%E8%A1%93%E9%81%B8%E5%AE%9A%E3%81%AE%E5%8B%98%E6%89%80---%E3%83%95%E3%83%AD%E3%83%B3%E3%83%88%E3%82%A8%E3%83%B3%E3%83%89%E3%82%AB%E3%83%B3%E3%83%95%E3%82%A1%E3%83%AC%E3%83%B3%E3%82%B9%E6%B2%96%E7%B8%84?type=design&node-id=1-2&t=atIWRqOeGvEKt6q2-1&scaling=contain&page-id=0%3A1" />
+<OG url="https://speakerdeck.com/takanorip/2023nian-ban-tesainsisutemuji-shu-xuan-ding-nokan-suo" />
 
 ### 12:20 フロントエンドエンジニアも知っておきたい HTTP/3 で変わること
 - 登壇者：吉田あひる[スターフェスティバル]　[@strtyuu](https://x.com/strtyuu)
