post fix: FEConf 沖縄2023記事に資料追加 - 12:30 ReactメインのチームにNext.jsを導入した道のり(#128)

--- a/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
+++ b/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
@@ -66,6 +66,8 @@ X アカウントについては、資料に記載されていたり、資料公
 ### 12:30 ReactメインのチームにNext.jsを導入した道のり
 - 登壇者：ペンギン丸　[@pengin_engineer](https://x.com/pengin_engineer)
 
+<OG url="https://speakerdeck.com/iuchimasatoshi/reactmeinnotimuninext-dot-jswodao-ru-sitadao-nori" />
+
 ### 13:40 [スポンサートーク]フロントエンドで物流現場をサポートする
 - 登壇者： 原田遼[CBcloud]
 
