post fix: JSConf JP 2023記事に資料3つ追加(#131)
- C 13:30-14:00 TypeScriptで型定義を信頼しすぎず「信頼境界線」を設置した話
- C 16:00-16:30 ゲーム「webページ崩し」の仕組み〜あなたの知らないDOMスクリプティングの世界〜
- A 19:20-19:30 The Past and Future of Kuma UI

--- a/src/content/posts/2023/2023-11-19-jsconf-jp-2023.mdx
+++ b/src/content/posts/2023/2023-11-19-jsconf-jp-2023.mdx
@@ -94,6 +94,8 @@ x アカウントについては、以下のように確認できたものを記
 
 - 登壇者：Himenon[ハイヤールー]　[@himenoglyph](https://x.com/himenoglyph)
 
+<OG url="https://www.docswell.com/s/hireroo/5987RP-2023-11-19-JSConfJP-confidence-boundaries-of-values" />
+
 ### A 14:10-14:40 Beyond the Web of Today
 
 - 登壇者：Kenneth Rohde Christiansen[Intel]　[@kennethrohde](https://x.com/kennethrohde)
@@ -170,6 +172,8 @@ x アカウントについては、以下のように確認できたものを記
 ### C 16:00-16:30 ゲーム「webページ崩し」の仕組み〜あなたの知らないDOMスクリプティングの世界〜
 
 - 登壇者：canalun (Kanaru Sato)[Tech Touch]　[@i_am_canalun](https://x.com/i_am_canalun)
+
+<OG url="https://docs.google.com/presentation/d/1hjs2J4fScWcs42oJ11F9uv1iuSnb_25TEZxyJo6UlLU/edit" />
 
 webページ崩しを遊べるデモサイト
 <OG url="https://canalun-company-2.deno.dev/guest_rooms/brickBlockAnywhere" />
@@ -259,7 +263,6 @@ webページ崩しを遊べるデモサイト
 - 登壇者：池原大然[Okta Japan]　[@Neri78](https://x.com/Neri78)
 
 ### A 19:00-19:10 Second System Syndrome - the tale of power-assert
-
 - 登壇者：和田卓人　[@t_wada](https://x.com/t_wada)
 
 <OG url="https://speakerdeck.com/twada/second-system-syndrome-a-tale-of-power-assert" />
@@ -269,12 +272,12 @@ webページ崩しを遊べるデモサイト
 <OG url="https://www.npmjs.com/package/swc-plugin-power-assert" />
 
 ### A 19:10-19:20 Hope is postponed disappointment
-
 - 登壇者：Luca Mugnaini[楽天]　[@luca_mug](https://x.com/luca_mug)
 
 ### A 19:20-19:30 The Past and Future of Kuma UI
-
 - 登壇者：poteboy[THECOO]　[@_poteboy_](https://x.com/_poteboy_)
+
+<OG url="https://speakerdeck.com/poteboy/kuma-uinokoremadetokorekara" />
 
 ### A 19:30-19:40 JavaScript なしで動作するモダンなコードの書き方
 
