misc: OGPキャッシュの最新化 + 調整(#136)
リンク切れを起こしていたところは差し替えたり削除したりした。

--- a/src/content/posts/2018/2018-06-05-php-install.mdx
+++ b/src/content/posts/2018/2018-06-05-php-install.mdx
@@ -121,7 +121,7 @@ Please do not report this issue to Homebrew/brew or Homebrew/core. which support
 `phpbrew`は`phpenv`と`php-build`を1つにしたようなもので、こちらでもバージョン管理ができます。
 業務で使っていたときはbrewでインストールしていましたが、前述のとおり`homebrew/php`が使えなくなったため、curl コマンドでインストールすることに。
 
-<OG url="https://github.com/phpbrew/phpbrew/blob/master/README.ja.md" />
+<OG url="https://github.com/phpbrew/phpbrew" />
 ※環境に応じた事前に必要なものが記載されているので、先に入れておくといいかも
 
 基本的に公式の案内に沿って進めました。
@@ -169,7 +169,6 @@ phpbrew install (バージョン) (バリアントオプション)
 ```
 ※phpbrew では`バリアント`という概念があります。
 拡張ライブラリをより扱いやすくしたものといった感じでしょうか。
-<OG url="https://github.com/phpbrew/phpbrew/blob/master/README.ja.md" />
 
 はい、やってきましたビルドの時間。
 いいかげんビルド成功してほしいという願いもむなしく...やっぱりコケました。
