--- a/src/content/posts/2019/2019-09-26-wsl-develop.mdx
+++ b/src/content/posts/2019/2019-09-26-wsl-develop.mdx
@@ -150,7 +150,7 @@ C:\Users\{USER}\AppData\Local\Packages\CanonicalGroupLimited.{ディストリビ
 
 ## 追加でインストールするもの
 ### Linuxbrew
-<OG url="https://brew.sh/index_ja" />
+<OG url="https://brew.sh/ja/" />
 
 Mac ではおなじみのパッケージ管理ツールである Homebrew の Linux 版です。
 Homebrew 2.0.0 からは Homebrew に統合され、正式に Linux をサポートするようになったそうです。
