--- a/src/content/posts/2019/2019-12-15-serverless-days-fukuoka-2019.mdx
+++ b/src/content/posts/2019/2019-12-15-serverless-days-fukuoka-2019.mdx
@@ -2,7 +2,7 @@
 title: "ServerlessDays Fukuoka 2019 資料リンクまとめ"
 description: "2019/12/14に開催されたServerlessDays Fukuoka 2019の発表資料まとめ"
 pubDate: "2019-12-15"
-updatedDate: "2019-12-21"
+updatedDate: "2023-11-25"
 category: "event"
 tags: ["リンク集", "サーバレス"]
 ---
@@ -10,6 +10,21 @@ tags: ["リンク集", "サーバレス"]
 日々、あちこちでイベントや勉強会が開催されていますね。
 ここのところ自分の体調もあって参加は自粛していたのですが、参加はできなくても公開された資料を探してみるのもよさそうだなと思い、先日開催されたサーバレスのイベントに関して資料リンクをまとめました。
 同じく資料を探している方のお役に立てれば幸いです。
+
+---
+
+**更新履歴**
+2023/11/25.
+- リンク切れになっていた資料・記事を削除
+  - Keynote
+  - キャッシュレスカフェのバックエンドを支えるサーバーレスアーキテクチャ
+  - Ruby on Jets × AWS で 研究の生産性を上げた話 〜 しがない学部生はServerlessで生産性向上の夢を見るか 〜
+- リンクを最新に差し替え
+  - TypeScriptとJestではじめる AWS製サーバーレス REST API のユニットテスト/E2Eテスト
+  - 目つぶり検証機作成期 〜サーバーレス初心者の手始め〜
+
+---
+
 
 import OG from '@/components/OG.astro'
 
@@ -38,9 +53,6 @@ Twitter の ID に関しては、わかった方だけ載せています。
 ### Keynote
 - 登壇者：Keisuke Nishitani (AWS)  [@Keisuke69](https://twitter.com/Keisuke69)
 
-レポート記事
-<OG url="https://dev.classmethod.jp/cloud/aws/serverlessdays-2019keynote-aws" />
-
 ### B2B企業がCloudFunctionsでC2Cサービスを立ち上げた話
 - 登壇者：西 武史(diffeasy)  [@_takeshi_24](https://twitter.com/_takeshi_24)
 
@@ -48,9 +60,6 @@ Twitter の ID に関しては、わかった方だけ載せています。
 
 ### キャッシュレスカフェのバックエンドを支えるサーバーレスアーキテクチャ
 - 登壇者：岡 春奈（クラスメソッド）  [@OkaHaruna](https://twitter.com/OkaHaruna)
-
-本人記事 + スライド
-<OG url="https://dev.classmethod.jp/etc/serverlessdays-fukuoka-2019-developersio-cafe" />
 
 ### グローバル展開のコネクティッドカーを支える大規模サーバーレスシステム事例
 - 登壇者：
@@ -84,7 +93,7 @@ Twitter の ID に関しては、わかった方だけ載せています。
 - 登壇者：和田 祐介(クラスメソッド)  [@waddy_u](https://twitter.com/waddy_u)
 
 本人記事 + スライド
-<OG url="https://dev.classmethod.jp/server-side/serverless/serverless-testing-using-typescript-and-jest" />
+<OG url="https://dev.classmethod.jp/articles/serverless-testing-using-typescript-and-jest/" />
 
 ### サーバーレスでAPIを提供する際のアプリケーション"以外"の話
 - 登壇者：Shimpei Takamatsu  [@shimpeiws](https://twitter.com/shimpeiws)
@@ -110,18 +119,16 @@ Twitter の ID に関しては、わかった方だけ載せています。
 #### Ruby on Jets × AWS で 研究の生産性を上げた話 〜 しがない学部生はServerlessで生産性向上の夢を見るか 〜
 - 登壇者：Keisuke Mori(大学生)
 
-<OG url="https://speakerdeck.com/moririn772/rubyonjets-with-aws-for-research" />
-
 #### エンジニア歴1ヶ月だけどサーバレスなサービスを使って事業に貢献できた話
 - 登壇者：木村 幸介(キャラウェブ)  [@kos_kim_8](https://twitter.com/kos_kim_8)
 
 <OG url="https://speakerdeck.com/kosukekimura/enziniali-1keyue-dakedosabaresunasabisuwoshi-tuteshi-ye-nigong-xian-dekitahua" />
 
 #### 目つぶり検証機作成期 〜サーバーレス初心者の手始め〜
-- 登壇者：たいがー(Kana Kitagawa)（大学生）  [@nun_is_tiger](https://twitter.com/nun_is_tiger)
+- 登壇者：たいがー(Kana Kitagawa)（大学生）  [@knuna_t](https://twitter.com/knuna_t)
 
-本人記事 + スライド ※2019/12/21追記
-<OG url="https://dev.classmethod.jp/etc/serverlessdaysfukuoka-metsuburikensyoult" />
+本人記事 + スライド
+<OG url="https://dev.classmethod.jp/articles/serverlessdaysfukuoka-metsuburikensyoult/" />
 
 ### スポンサーLT
 
