--- a/src/content/posts/2020/2020-04-23-react-material-ui.mdx
+++ b/src/content/posts/2020/2020-04-23-react-material-ui.mdx
@@ -2,7 +2,7 @@
 title: "React向けUIコンポーネントライブラリ、Material UI(v4)の紹介"
 description: "ReactのUIコンポーネントライブラリの1つであるMaterial UIについて、おおよそどんなことができるものなのか紹介"
 pubDate: "2020-04-23"
-updatedDate: "2022-01-24"
+updatedDate: "2023-11-25"
 category: "develop"
 tags: ["TypeScript", "React", "Material UI"]
 ---
@@ -701,11 +701,12 @@ Fab の例
 
 #### Date / Time(pickers)
 Date Picker 的なコンポーネント群。
-詳細は Material-UI Pickers から。
-<OG url="https://material-ui-pickers.dev" />
-なお、この Material-UI Pickers はすでにアーカイブになっていて、Matarial UI 5系において lab の方に取り込まれるようです。
+詳細は Material-UI Pickers から（2023/11/25 URLが変わっていたので修正）
 
- KeyboardDatePickerの例（variant に inline 指定）
+<OG url="https://github.com/mui/material-ui-pickers" />
+なお、この Material-UI Pickers は Matarial UI 5系において lab の方に取り込まれるようです。
+
+KeyboardDatePickerの例（variant に inline 指定）
 <img src="/gifs/2020/react-material-ui/date-picker-inline.gif" width="40%" alt="KeyboardDatePicker(inline)コンポーネントのプレビューGIF"/>
 
 KeyboardDatePicker の例（variant に dialog 指定）
