--- a/src/content/posts/2020/2020-08-08-developers-summit-2020-summer.mdx
+++ b/src/content/posts/2020/2020-08-08-developers-summit-2020-summer.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2020 Summer 資料リンクまとめ"
 description: "デブサミ2020夏の公開資料、Twitterのリンクまとめ"
 pubDate: "2020-08-08"
-updatedDate: "2020-08-08"
+updatedDate: "2023-11-25"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -10,6 +10,13 @@ tags: ["リンク集", "Developers Summit"]
 少し間が空いてしまいましたが、先日の2020/7/21にオンライン開催されたデブサミの資料リンクをまとめましたので、よろしければご活用ください。
 
 ※この記事は [Qiita](https://qiita.com/h-yoshikawa44/items/e08be89280f129d808d1) からの転載です。
+
+---
+
+**更新履歴**
+2023/11/25...トランスフォーメーション・ジャーニー：資料リンク切れを起こしていたので削除。
+
+---
 
 import OG from "@/components/OG.astro"
 
@@ -173,8 +180,6 @@ YouTube ※講演動画
 
 #### トランスフォーメーション・ジャーニー
 - 登壇者：市谷 聡啓[レッドジャーニー]　[@papanda](https://twitter.com/papanda)
-
-<OG url="https://www.slideshare.net/papanda/ss-237095559?ref=https://note.com/dora_e_m/n/n4e16f183ad58" />
 
 ### B-9 Fly fest into the moon. 大阪のフェスが全国のオンラインフェスになるまでの2か月で学んだこと
 - 登壇者：
