--- a/src/content/posts/2021/2021-02-20-developers-summit-2021.mdx
+++ b/src/content/posts/2021/2021-02-20-developers-summit-2021.mdx
@@ -2,13 +2,20 @@
 title: "Developers Summit 2021 公開資料・Twitterリンクまとめ"
 description: "デブサミ2021の公開資料、Twitterのリンクまとめ"
 pubDate: "2021-02-20"
-updatedDate: "2021-03-19"
+updatedDate: "2023-11-25"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
 
 2021/02/18(木)、19(金)で開催されたデブサミ2021に関する、現時点での公開資料とTwitter アカウントリンクをまとめました。
 よろしければご活用ください。
+
+---
+
+**更新履歴**
+2023/11/25...18-C-6 価値貢献につなげるデータ組織のシンプル戦略マネジメント：資料リンク切れを起こしていたので削除。
+
+---
 
 import OG from "@/components/OG.astro"
 
@@ -148,8 +155,6 @@ Twitter アカウントについては、多くの方はデブサミ公式サイ
 
 ### 18-C-6 価値貢献につなげるデータ組織のシンプル戦略マネジメント
 - 登壇者：竹原 一彰[メルペイ]　[@_zak3](https://twitter.com/_zak3)
-
-<OG url="https://speakerdeck.com/zak3/a-simple-strategy-management-in-a-data-team" />
 
 {/* <!-- textlint-disable ja-technical-writing/max-kanji-continuous-len --> */}
 
