--- a/src/content/posts/2021/2021-09-26-material-ui-v5.mdx
+++ b/src/content/posts/2021/2021-09-26-material-ui-v5.mdx
@@ -2,7 +2,7 @@
 title: "こんにちはMUI！ 新しくなったMaterial UI v5"
 description: "2021/09にリリースされ、新ブランドになるなど新しくなったMaterial UIをさらっと紹介してみる"
 pubDate: "2021-09-26"
-updatedDate: "2023-07-09"
+updatedDate: "2023-11-25"
 category: "develop"
 tags: ["TypeScript", "React", "Material UI"]
 ---
@@ -958,7 +958,8 @@ Navigation
 <OG url="https://v5-0-6.mui.com/components/pagination" />
 
 #### pickers → lab
-<OG url="https://material-ui-pickers.dev" />
+※2023/11/25 リンクをリポジトリ URL に差し替え
+<OG url="https://github.com/mui/material-ui-pickers" />
 
 v4 の時点では、全くの別パッケージとして存在していた Date Pickers 的なコンポーネント群が lab に取り込まれました。
 そのため、元々のリポジトリはすでにアーカイブとなっています。
