--- a/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
+++ b/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
@@ -2,7 +2,7 @@
 title: "HTML5プロフェッショナル認定試験 レベル1(ver2.5)に合格したけど、めっちゃギリギリだった話"
 description: "HTMLプロフェッショナル認定試験 レベル1(ver2.5)の受験レポート"
 pubDate: "2022-06-11"
-updatedDate: "2022-06-11"
+updatedDate: "2023-11-25"
 category: "qualification"
 tags: ["HTML", "CSS"]
 ---
@@ -146,7 +146,9 @@ ver2.5 の問題集はまだ出版されてなかったので、ver2.0 の問題
 その他にもセミナーがあったりするそうです。
 
 自分は利用していませんが、認定教材の1つに Ping-t があるので、そこで問題を解くのもよさそう（当試験分は有料）
-<OG url="https://ping-t.com" />
+
+※2023/11/25：サイトが新しくなっていたので URL 差し替えました。
+<OG url="https://mondai.ping-t.com/g" />
 
 ## 受験してどうだった？
 {/* <!-- textlint-disable ja-technical-writing/ja-no-successive-word --> */}
