--- a/src/content/posts/2023/2023-02-11-developers-summit-2023.mdx
+++ b/src/content/posts/2023/2023-02-11-developers-summit-2023.mdx
@@ -2,13 +2,22 @@
 title: "Developers Summit 2023 公開資料・Twitterリンクまとめ"
 description: "デブサミ2023の公開資料、Twitterのリンクまとめ"
 pubDate: "2023-02-11"
-updatedDate: "2023-02-11"
+updatedDate: "2023-11-25"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
 
 2023/02/09(木)、10(金)で開催されたデブサミ2023に関する、現時点で公開資料と Twitter アカウントリンクをまとめました。
 よろしければご活用ください。
+
+{/* <!-- textlint-disable --> */}
+---
+
+**更新履歴**
+2023/11/25...9-A-8 「マーケティング」とあるけれど、エンジニアのあなたでないと出来ないかもしれないプロダクトマーケティングマネージャーのはなし：資料リンク切れを起こしていたので削除。
+
+---
+
 
 import OG from "@/components/OG.astro"
 
@@ -25,7 +34,7 @@ Twitter アカウントについては、多くの方はデブサミ公式サイ
 
 ちなみに [Zenn 版](https://zenn.dev/yumemi_inc/articles/2023-02-11-developers-summit-2023)ではスライド埋め込みをしているので、そちらの方がさっと見やすいかもです。
 
-{/* <!-- textlint-disable --> */}
+
 
 ## 2023/02/09(木)
 ### 9-A-1 デジタル庁におけるソフトウェア開発のこれからのはなし -今よりもよい10年後のために必要そうなこと-
@@ -169,8 +178,6 @@ Twitter アカウントについては、多くの方はデブサミ公式サイ
 
 ### 9-A-8 「マーケティング」とあるけれど、エンジニアのあなたでないと出来ないかもしれないプロダクトマーケティングマネージャーのはなし
 - 登壇者：村上 功光[グレープシティ]
-
-<OG url="https://speakerdeck.com/grapecity_dev/developers-summit-2023" />
 
 ### 9-B-8 出前館×Zホールディングスのクイックコマースにおける協業事例～リアルタイム在庫連携の裏側～
 - 登壇者：三木 一馬[出前館]
