post fix: 9-E-9のスライドが消えていたので戻した、セッション番号の修正(#140)

--- a/src/content/posts/2023/2023-02-11-developers-summit-2023.mdx
+++ b/src/content/posts/2023/2023-02-11-developers-summit-2023.mdx
@@ -273,6 +273,8 @@ Twitter アカウントについては、多くの方はデブサミ公式サイ
 ### 9-E-9 テストを学んでみたい開発者のための ソフトウェアテスト読書マップ
 - 登壇者：鈴木 一裕[]　[@kz_suzuki](https://twitter.com/kz_suzuki)
 
+<OG url="https://speakerdeck.com/kzsuzuki/software-testing-reading-map-for-developers" />
+
 本人記事
 <OG url="https://www.kzsuzuki.com/entry/devsumi2023" />
 
@@ -453,10 +455,10 @@ Twitter アカウントについては、多くの方はデブサミ公式サイ
   - 岡村 謙杜[コドモン]
   - Dimitrov Chavdar[コドモン]
 
-### 10-A-7 数字を上げることが目的になっていませんか？～Four Keysによる開発生産性向上で陥った3つの失敗
+### 10-A-8 数字を上げることが目的になっていませんか？～Four Keysによる開発生産性向上で陥った3つの失敗
 - 登壇者：川津 雄介[リンクアンドモチベーション]
 
-### 10-B-7 「顧客が本当に必要だったもの」を求めて
+### 10-B-8 「顧客が本当に必要だったもの」を求めて
 - 登壇者：市橋 立[弁護士ドットコム]
 
 <OG url="https://speakerdeck.com/bengo4com/in-search-of-what-the-customer-really-wanted-6627cb55-46d9-4958-9546-35820626d321" />
