post fix: FEConf 沖縄2023記事にneccoさんのレポート記事追加(#142)

--- a/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
+++ b/src/content/posts/2023/2023-11-18-frontend-conf-okinawa-2023.mdx
@@ -2,7 +2,7 @@
 title: "フロントエンドカンファレンス沖縄 2023 公開資料・Xアカウントリンクまとめ"
 description: "フロントエンドカンファレンス沖縄 2023の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2023-11-18"
-updatedDate: "2023-11-18"
+updatedDate: "2023-12-03"
 category: "event"
 tags: ["リンク集", "フロントエンドカンファレンス"]
 ---
@@ -28,6 +28,12 @@ X アカウントについては、資料に記載されていたり、資料公
 
 {/* <!-- textlint-disable --> */}
 
+---
+更新履歴
+2023/11/19...スライド追加：11:50 デザインシステムの技術選定・設計の勘所 2023
+2023/11/20...資料追加：12:30 ReactメインのチームにNext.jsを導入した道のり
+2023/12/03...レポート記事追加：necco さんのセッション
+
 ## アーカイブ
 本イベントは YouTube で配信されていて、アーカイブが残るようです。
 <OG url="https://www.youtube.com/watch?v=EAfjjmxkG9A" />
@@ -35,6 +41,9 @@ X アカウントについては、資料に記載されていたり、資料公
 ## タイムテーブル
 ### 10:10 [ゲストセッション]Figmaプロトタイプ入門〜インタラクションイメージのつくりかた〜
 - 登壇者：中川 小雪[necco]　[@necco_nakagawa](https://x.com/necco_nakagawa)
+
+necco さんのレポート記事
+<OG url="https://necco.inc/note/29790" />
 
 ### 10:30 プライベートプロダクト戦略。Webアプリを起点にしたクロスプラットフォームで大企業が真似できない価値をつくる
 - 登壇者：榊原昌彦　[@rdlabo](https://x.com/rdlabo)
@@ -52,6 +61,9 @@ X アカウントについては、資料に記載されていたり、資料公
 
 ### 11:35 [ゲストセッション]リッチなアニメーションを手軽に実装！ Lottieアニメーションの基本と活用事例
 - 登壇者：田口 冬菜[necco]　[@fuyuna_design](https://x.com/fuyuna_design)
+
+necco さんのレポート記事
+<OG url="https://necco.inc/note/29790" />
 
 ### 11:50 デザインシステムの技術選定・設計の勘所 2023
 - 登壇者：takanorip[Ubie]　[@takanoripe](https://x.com/takanoripe)
