post fix: JSConf JP 2023記事にスピーカーノートの記事版リンク追加(#142)

--- a/src/content/posts/2023/2023-11-19-jsconf-jp-2023.mdx
+++ b/src/content/posts/2023/2023-11-19-jsconf-jp-2023.mdx
@@ -2,7 +2,7 @@
 title: "JSConf JP 2023 公開資料・Xアカウントリンクまとめ"
 description: "JSConf JP 2023の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2023-11-19"
-updatedDate: "2023-11-19"
+updatedDate: "2023-12-03"
 category: "event"
 tags: ["リンク集", "JSConf JP"]
 ---
@@ -29,14 +29,19 @@ x アカウントについては、以下のように確認できたものを記
 
 [Zenn 版](https://zenn.dev/yumemi_inc/articles/2023-11-19-jsconf-jp-2023)ではスライド埋め込みをしているので、そちらの方がさっと見やすいかもです。
 
+{/* <!-- textlint-disable --> */}
+
+---
+更新履歴
+2023/11/20...スライド追加：12:30 ReactメインのチームにNext.jsを導入した道のり
+2023/12/03...スピーカーノートの記事版追加：B 15:30-16:00 書いたJavaScriptがそのままブラウザで動く未来へ
+
 ## アーカイブ
 
 本イベントは YouTube で配信されていましたが、執筆時点ではトラック A の動画が非公開になっていました。
 アーカイブとして残るのかがわからなかったため、一旦 JSConf JP の YouTube アカウントへのリンクのみ記載にしておきます。
 
 <OG url="https://www.youtube.com/@jsconfjp" />
-
-{/* <!-- textlint-disable --> */}
 
 ## 講演一覧
 
@@ -148,6 +153,9 @@ x アカウントについては、以下のように確認できたものを記
 
 （スライドでなくスピーカーノート）
 <OG url="https://speakerdeck.com/sosukesuzuki/jsconf-jp-2023-supikanoto-shu-itajavascriptgasonomamaburauzadedong-kuwei-lai-he" />
+
+スピーカーノートの記事版
+<OG url="https://zenn.dev/sosukesuzuki/articles/ab5377c8a99cb7" />
 
 ### C 15:30-16:00 Hono v3 and v4
 
