post fix: デブサミ2024記事に資料と本人記事を追加 2/20(#154)
- スライド追加
  - 16-A-1 Flight of a Decade:10年間の旅路と再会
  - 16-C-3 技術的負債との戦い！　PR TIMESエンジニアチームのオブザーバビリティ改善ジャーニー
  - 16-E-4 1万人以上が参加するオンラインコミュニティ「情シスSlack」が参加者と運営者の仕事やキャリアに与えたインパクト
  - 16-D-5 継続的デリバリーを支えるPipeline as Codeという取り組み
- 本人記事追加
  - 15-B-9 「ITエンジニア本大賞2024」プレゼン大会 - 1冊ですべて身につくJavaScript入門講座
  - 16-C-3 技術的負債との戦い！　PR TIMESエンジニアチームのオブザーバビリティ改善ジャーニー
  - 16-B-4 生成AIを搭載したプロダクト開発～少人数で爆速リリースしてわかったこと～
  - 16-C-9 エンジニア人生のはじまりをつくるアジャイル開発時代の新人研修～教えるからの脱却～
  - 16-E-9 オフラインカンファレンス復活！イベント現地参加の魅力を語りつくすリレーセッション - 技術書同人誌博覧会 - イベント現地参加は貴重な栄養源！

OGPキャッシュは追加と並び替えをしたので差分が大きく出ている。

--- a/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
+++ b/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2024 公開資料・Xアカウントリンクまとめ"
 description: "デブサミ2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-02-17"
-updatedDate: "2024-02-17"
+updatedDate: "2024-02-20"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -26,6 +26,21 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 （Zenn の方でも投稿しているのでそちらのコメントにでも）
 
 ちなみに [Zenn 版](https://zenn.dev/yumemi_inc/articles/2024-02-17-developers-summit-2024)ではスライド埋め込みをしているので、そちらの方がさっと見やすいかもです。
+
+---
+更新履歴
+2024/02/20
+- スライド追加
+  - 16-A-1 Flight of a Decade:10年間の旅路と再会
+  - 16-C-3 技術的負債との戦い！　PR TIMESエンジニアチームのオブザーバビリティ改善ジャーニー
+  - 16-E-4 1万人以上が参加するオンラインコミュニティ「情シスSlack」が参加者と運営者の仕事やキャリアに与えたインパクト
+  - 16-D-5 継続的デリバリーを支えるPipeline as Codeという取り組み
+- 本人記事追加
+  - 15-B-9 「ITエンジニア本大賞2024」プレゼン大会 - 1冊ですべて身につくJavaScript入門講座
+  - 16-C-3 技術的負債との戦い！　PR TIMESエンジニアチームのオブザーバビリティ改善ジャーニー
+  - 16-B-4 生成AIを搭載したプロダクト開発～少人数で爆速リリースしてわかったこと～
+  - 16-C-9 エンジニア人生のはじまりをつくるアジャイル開発時代の新人研修～教えるからの脱却～
+  - 16-E-9 オフラインカンファレンス復活！イベント現地参加の魅力を語りつくすリレーセッション - 技術書同人誌博覧会 - イベント現地参加は貴重な栄養源！
 
 ## 2024/02/15(木)
 ### 15-A-1 エンジニアのための、生成AIとの付き合い方
@@ -216,6 +231,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 <OG url="https://www.sbcr.jp/product/4815615758/" />
 
+本人記事
+<OG url="https://www.webcreatorbox.com/news/itbook-award-2024-event" />
+
 #### 「技術書」の読書術 達人が教える選び方・読み方・情報発信＆共有のコツとテクニック
 - 著者：
   - IPUSIRON　[@ipusiron](https://twitter.com/ipusiron)
@@ -280,6 +298,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 ### 16-A-1 Flight of a Decade:10年間の旅路と再会
 - 登壇者：庄司 嘉織[Launchable]　[@yoshiori](https://twitter.com/yoshiori)
 
+<OG url="https://speakerdeck.com/yoshiori/go-down-rockin" />
+
 ### 16-B-1 ビジネスと開発が真のパートナーになる、事業に貢献するエンジニアの姿とは
 - モデレーター：押久保 剛[翔泳社]
 - 登壇者：
@@ -330,6 +350,11 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 小林 良太郎[New Relic]
   - 櫻井 慎也[PR TIMES]
 
+<OG url="https://speakerdeck.com/shinyasakurai/ji-shu-de-fu-zhai-tonozhan-i-pr-timesenziniatimuno-obuzababiriteigai-shan-ziyani-number-devsumi" />
+
+本人記事（櫻井 慎也）
+<OG url="https://developers.prtimes.jp/2024/02/20/devsumi2024/" />
+
 ### 16-D-3 Elasticが目指す生成AI 活用の将来像
 - 登壇者：杉本 知洋[Elasticsearch]
 
@@ -348,6 +373,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 <OG url="https://speakerdeck.com/legalontechnologies/product-development-with-generative-ai" />
 
+本人記事
+<OG url="https://tech.legalforce.co.jp/entry/2024/02/19/173550" />
+
 ### 16-C-4 「クラウドにつながらない」と言う前に～開発者とネットワークエンジニアの相互尊重のために～
 - 登壇者：宮川 亮[野村総合研究所]　[@ktokenoi](https://twitter.com/ktokenoi)
 
@@ -358,6 +386,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 - 登壇者：
   - 岡村 慎太郎[日本ビジネステクノロジー協会]　[@okash1n](https://twitter.com/okash1n)
   - 長谷川 真[日本ビジネステクノロジー協会]　[@na2neko](https://twitter.com/na2neko)
+
+<OG url="https://speakerdeck.com/na2neko/developers-summit-2024-16-e-4-4c861ddd-3e60-4f41-8df5-0dcbe8320d67" />
 
 ### 16-A-5 SIerな会社の中でXR（VR・メタバース）を用いた新規事業開発に挑戦して見えてきた景色
 - 登壇者：
@@ -379,6 +409,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 ### 16-D-5 継続的デリバリーを支えるPipeline as Codeという取り組み
 - 登壇者：杉野 博徳[NTTコミュニケーションズ]
+
+<OG url="https://speakerdeck.com/qvsteam/ji-sok-de-deribariwozhi-erupipeline-as-code-toiuqu-rizu-mi" />
 
 ### 16-E-5 ※CLOSED
 
@@ -482,6 +514,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 風間 裕也[10X]　[@nihonbuson](https://twitter.com/nihonbuson)
   - 安井 力　[@yattom](https://twitter.com/yattom)
 
+本人記事（風間 裕也）
+<OG url="https://nihonbuson.hatenadiary.jp/entry/NewcomerTrainingManifesto" />
+
 ### 16-D-9 大学生はAIをどう活用しているのか？次世代人材に向けたテクノロジー教育最前線
 - 登壇者：横山翔（ゆずたそ）[風音屋]　[@yuzutas0](https://twitter.com/yuzutas0)
 
@@ -510,12 +545,13 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 <OG url="https://speakerdeck.com/okuramasafumi/how-to-build-a-conference-for-both-newbies-and-seasoned-devs" />
 
-861a1d083edf4871ab94154d8ff87246
-
 #### 技術書同人誌博覧会 - イベント現地参加は貴重な栄養源！
 - 登壇者：ariaki[技術書同人誌博覧会]　[@ariaki4dev](https://twitter.com/ariaki4dev)
 
 <OG url="https://www.docswell.com/s/gishohaku/5Q8PG3-devsumi-20240216" />
+
+本人記事
+<OG url="https://note.com/ariakira/n/nf33351d05edb" />
 
 ---
 
