post fix: デブサミ2024記事にスライドと記事追加(#154)
- スライド追加
  - 15-A-3 エンジニアの成長とそれを支える組織の考え方
  - 16-B-9 生成AIで開発生産性向上！リレーセッション - 組織と人とデータと生成AIでプロセス変革を！
- 本人記事・レポート記事追加
  - 15-B-9 「ITエンジニア本大賞2024」プレゼン大会
    - 「技術書」の読書術 達人が教える選び方・読み方・情報発信＆共有のコツとテクニック
  - 16-B-6 探索型のプロダクト開発を始めよう～正しいものを正しくつくる2.0～
  - 16-E-7 良いプロダクト作りのための組織育成（理論＆実践編） 健全なコードは健全な組織、健全なチームから

--- a/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
+++ b/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2024 公開資料・Xアカウントリンクまとめ"
 description: "デブサミ2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-02-17"
-updatedDate: "2024-02-20"
+updatedDate: "2024-03-02"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -41,6 +41,16 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 16-B-4 生成AIを搭載したプロダクト開発～少人数で爆速リリースしてわかったこと～
   - 16-C-9 エンジニア人生のはじまりをつくるアジャイル開発時代の新人研修～教えるからの脱却～
   - 16-E-9 オフラインカンファレンス復活！イベント現地参加の魅力を語りつくすリレーセッション - 技術書同人誌博覧会 - イベント現地参加は貴重な栄養源！
+
+2024/03/02
+- スライド追加
+  - 15-A-3 エンジニアの成長とそれを支える組織の考え方
+  - 16-B-9 生成AIで開発生産性向上！リレーセッション - 組織と人とデータと生成AIでプロセス変革を！
+- 本人記事・レポート記事追加
+  - 15-B-9 「ITエンジニア本大賞2024」プレゼン大会
+    - 「技術書」の読書術 達人が教える選び方・読み方・情報発信＆共有のコツとテクニック
+  - 16-B-6 探索型のプロダクト開発を始めよう～正しいものを正しくつくる2.0～
+  - 16-E-7 良いプロダクト作りのための組織育成（理論＆実践編） 健全なコードは健全な組織、健全なチームから
 
 ## 2024/02/15(木)
 ### 15-A-1 エンジニアのための、生成AIとの付き合い方
@@ -86,6 +96,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 ### 15-A-3 エンジニアの成長とそれを支える組織の考え方
 - 登壇者：高安 厚思[ビッグツリーテクノロジー&コンサルティング]
+
+<OG url="https://speakerdeck.com/takayasu/enzinianocheng-chang-tosorewozhi-eruzu-zhi-nokao-efang" />
 
 ### 15-B-3 自動テスト歴0年でもできる！テスト工数を46時間/月削減した方法　～1年目で得られた成果と展望～
 - 登壇者：
@@ -223,6 +235,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 吉羽 龍太郎[アトラクタ]　[@ryuzee](https://twitter.com/ryuzee)
 - [2024年の技術書・ビジネス書の各ベスト10](https://www.shoeisha.co.jp/campaign/award/result/)
 
+<OG url="https://codezine.jp/article/detail/19069" />
+
 ---
 **--技術書部門--**
 
@@ -240,6 +254,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
   - 増井敏克　[@masuipeo](https://twitter.com/masuipeo)
 
 <OG url="https://www.shoeisha.co.jp/book/detail/9784798171548" />
+
+本人記事（増井敏克）
+<OG url="https://note.com/masuipeo/n/n311e395f86b7" />
 
 #### 単体テストの考え方/使い方 プロジェクトの持続可能な成長を実現するための戦略
 - 著者：Vladimir Khorikov
@@ -422,6 +439,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 <OG url="https://www.docswell.com/s/papanda/ZXYJY4-2024-02-16-170851" />
 
+本人記事
+<OG url="https://note.com/papanda0806/n/n94738932a366" />
+
 ### 16-C-6 開発者こそ幸せたれ！クラウドネイティブ時代の開発を支えるPlatform Engineeringのススメ
 - 登壇者：北村 慎太郎[レッドハット]　[@shinkita38](https://twitter.com/shinkita38)
 
@@ -458,6 +478,9 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 - 登壇者：ZOE[ウィルゲート]　[@for__3](https://twitter.com/for__3)
 
 <OG url="https://speakerdeck.com/ikezoemakoto/developers-summit-2024-liang-ipurodakutozuo-rinotamenozu-zhi-yu-cheng-li-lun-and-shi-jian-bian-jian-quan-nakodohajian-quan-nazu-zhi-jian-quan-natimukara" />
+
+本人記事
+<OG url="https://blog.zoe.tools/entry/2024/02/25/213000" />
 
 ### 16-A-8 徹底解剖!?JALインフォテック様が取り組む予兆検知/早期復旧を可能にするデータ分析/活用戦略とは？
 - 登壇者：
@@ -507,6 +530,8 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 
 #### 組織と人とデータと生成AIでプロセス変革を！
 - 登壇者：大内 孝明[NEC]
+
+<OG url="https://speakerdeck.com/takaakiouchi/developers-summit-2024-16-b-9-necda-nei-xiao-ming-zu-zhi-toren-todetatosheng-cheng-aidepurosesubian-ge-wo" />
 
 ### 16-C-9 エンジニア人生のはじまりをつくるアジャイル開発時代の新人研修～教えるからの脱却～
 - 登壇者：
