post fix: 2019 - AWS資格記事の画像最適化対応(#158)

--- a/src/content/posts/2019/2019-04-25-aws-qualification.mdx
+++ b/src/content/posts/2019/2019-04-25-aws-qualification.mdx
@@ -11,6 +11,7 @@ tags: ["AWS"]
 なかなか勉強が捗ってないですが、今年の目標としてAWSの資格の勉強中。
 まずは3つの資格に挑戦する予定です。
 
+import ImageWrapper from "@/components/ImageWrapper.astro"
 import OG from '@/components/OG.astro'
 
 ## AWSの資格
@@ -19,7 +20,7 @@ import OG from '@/components/OG.astro'
 ### 種類
 次のとおり、AWS の資格は全部で11あります。
 
-<img src="/screenshots/2019/aws-qualification/aws-qualification-list.png" width="100%" alt="AWS資格の種類" />
+<ImageWrapper src="screenshots/2019/aws-qualification/aws-qualification-list.png" alt="AWS資格の種類" />
 
 この中で、一番易しいものとして「クラウドプラクティショナー」という資格があるのですが、それには挑戦せず、その上のアソシエイトレベルの資格に挑戦したいと思っています。
 
